# kedro-error-emailer

./: README.md  pyproject.toml
src/: requirements.dev.txt  requirements.txt
src/kedro_error_emailer/: __init__.py  email.py  error_handling.py  hooks.py  utils.py
